ServiceName/deploy/k8s.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: servicename-deployment
  labels:
    k8s-app: servicename            
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicename
  template:
    metadata:
      labels:
        app: servicename
        k8s-app: servicename
    spec:
      containers:
      - name: servicename-container
        image: gitea/gitea:1.4
        ports:
        - containerPort: 3000
          name: http
        - containerPort: 22
          name: ssh
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits: 
            cpu: "100m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /version
            port: http
          timeoutSeconds: 5
          initialDelaySeconds: 20
        readinessProbe:
          httpGet:
            path: /version
            port: http
          timeoutSeconds: 5
          initialDelaySeconds: 20
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: services-ingress
  labels:
    k8s-app: servicename
  annotations:  
    kubernetes.io/ingress.class: "nginx"    
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:8080;
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
spec:
  rules:
  - http:
      paths:
      - path: /      
#      - path: /podinfo(/|$)(.*)
        backend:
          serviceName: servicename-service
          servicePort: 81
